# gapic-generator-go

./: .bazeliskrc  .bazelrc  .gitignore  BUILD  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  WORKSPACE  docker-entrypoint.sh  gapic.sh  go.mod  go.sum  release-please-config.json  renovate.json  repositories.bzl  repositories_go.bzl  test.sh
.circleci/: config.yml
.gemini/: GEMINI.md
.github/: CODEOWNERS  header-checker-lint.yml  label-sync.yaml  product-label.yaml  release-please.yml  snippet-bot.yml  sync-repo-settings.yaml
.github/release-tool/: changelog.go  main.go
.github/workflows/: assets.yaml  ci.yaml  deps.yaml  release-please.yaml  release.yaml
.librarian/: config.yaml  state.yaml
.librarian/generator-input/: repo-config.yaml
cmd/gen-go-sample/: BUILD.bazel  README.md  bytes.go  enum.go  enum_test.go  enuminit.go  gapic.go  gensample.go  inittree.go  inittree_test.go  main.go  main_sampleconfig_test.go  main_test.go  out.go  paging.go  primval.go  resource.go  resource_test.go  sampmain.go  test.bash  typing.go
cmd/gen-go-sample/schema_v1p2/: BUILD.bazel  schema.go
cmd/gen-go-sample/testdata/: sample.want  sample_empty.want  sample_empty_object.want  sample_enum.want  sample_lro.want  sample_map_out.want  sample_paging.want  sample_response_map_field.want  sample_response_repeated_field.want  sample_unary.want  sample_write_file.want
cmd/protoc-gen-gcli/: README.md  main.go  test.sh
cmd/protoc-gen-go_cli/: BUILD.bazel  README.md  main.go  test.sh
cmd/protoc-gen-go_cli/testprotos/kiosk/: kiosk.proto
cmd/protoc-gen-go_cli/testprotos/showcase/: echo.proto  identity.proto  messaging.proto  testing.proto
cmd/protoc-gen-go_gapic/: BUILD  main.go
cmd/protoc-gen-go_gcli/: README.md  test.sh
cmd/protoc-gen-gogapic/: client_init.go  client_init_test.go  doc_file.go  doc_file_test.go  example.go  example_test.go  imports.go  license.go  lro.go  main.go  main_test.go  markdown.go  markdown_test.go  paging.go  paging_test.go
gengapic/: client_init.go  client_init_test.go  doc_file.go  doc_file_test.go  example.go  example_test.go  fuzz.go  gengapic.go  gengapic_test.go  imports.go  license.go  lro.go  markdown.go  markdown_test.go  paging.go  paging_test.go  stream.go
gengapic/testdata/: empty_client_init.want  empty_opt.want  (+6 more)
internal/: version.go
internal/gencli/: BUILD.bazel  cmd_file.go  cmd_file_test.go  completion_file.go  completion_file_test.go  flag.go  flag_test.go  gencli.go  main_file.go  root_file.go  root_file_test.go  service_file.go  service_file_test.go  types.go  util.go  util_test.go
internal/gencli/testdata/: completion_file.want  copy-todos.want  create-todo.want  list-todos.want  lro-paged.want  manage-todos.want  root_file.want  service_file.want  start-todo.want  watch-todo.want
internal/gengapic/: BUILD.bazel  auxiliary.go  auxiliary_test.go  client_init.go  client_init_test.go  custom_operation.go  custom_operation_test.go  doc_file.go  doc_file_test.go  example.go  example_test.go  feature.go  feature_test.go  fuzz.go  generator.go  generator_test.go  gengapic.go  gengapic_test.go  gengrpc.go  gengrpc_test.go  genrest.go  genrest_test.go  helpers.go  helpers_test.go  heuristics.go  heuristics_test.go  imports_test.go  log  lro.go  markdown.go  markdown_test.go  media_upload.go  metadata.go  metadata_test.go  method_selective.go  method_selective_test.go  mixins.go  mixins_test.go  options.go  options_test.go  (+13 more)
internal/gengapic/testdata/: api_versions_section_list.want  api_versions_section_same.want  custom_op_example.want  custom_op_example_all.want  custom_op_init.want  custom_op_init_helper.want  custom_op_init_metrics.want  custom_op_type.want  custom_op_type_bool.want  custom_op_type_enum.want  deprecated_client_init.want  doc_file.want  doc_file_alpha.want  doc_file_alpha_emptyservice.want  doc_file_api_version_section.want  doc_file_beta.want  doc_file_beta_emptyservice.want  doc_file_deprecated_emptyservice.want  doc_file_emptyservice.want  doc_file_rest.want  empty_client_init.want  empty_example.want  empty_example_all.want  empty_example_grpc.want  empty_opt.want  empty_snippet.want  exported_set_google_client_info_client_init.want  foo_client_init.want  foo_client_init_all_telemetry.want  foo_client_init_default.want  foo_client_init_logging.want  foo_client_init_metrics.want  foo_example.want  foo_example_all.want  foo_example_rest.want  foo_example_rest_all.want  foo_opt.want  foo_rest_client_init.want  foo_rest_client_init_default.want  foo_rest_client_init_metrics.want  (+50 more)
internal/gensample/: BUILD.bazel  bytes.go  enum.go  enum_test.go  gapic.go  genmanifest.go  genmanifest_test.go  gensample.go  gensample_sampleconfig_test.go  gensample_test.go  inittree.go  inittree_test.go  out.go  paging.go  plugin.go  primval.go  resource.go  resource_test.go  sampmain.go  typing.go
internal/gensample/schema_v1p2/: BUILD.bazel  schema.go  schema_test.go
internal/gensample/testdata/: manifest.want  sample_empty.want  sample_empty_object.want  sample_enum.want  sample_lro.want  sample_map_out.want  sample_paging.want  sample_response_map_field.want  sample_response_repeated_field.want  sample_unary.want  sample_write_file.want
internal/grpc_service_config/: BUILD.bazel  config.go  config_test.go  grpc_service_config.pb.go  grpc_service_config.proto
internal/pbinfo/: BUILD.bazel  comments.go  pbinfo.go  pbinfo_test.go  prim2go.go
internal/snippets/: BUILD.bazel  api_info.go  snippets.go  snippets_test.go
internal/snippets/metadata/: BUILD.bazel  metadata.pb.go  metadata.proto
internal/testing/sample/: BUILD.bazel  sample.go  serviceconfig.go
rules_go_gapic/: gapic_repositories.bzl  go_gapic.bzl  go_gapic_pkg.bzl  go_gapic_repositories.bzl
showcase/: README.md  cloud_trace_test.go  compliance_test.go  echo_test.go  go.mod  go.sum  identity_test.go  leakcheck.go  main_test.go  observability_fixture_test.go  sequence_test.go  showcase-local.sh  showcase.bash  trace_test.go  tracing_scenarios_test.go
util/: execute.go  showcase.bash
utils/: license.go  showcase.bash
(+22 files in other folders)
