load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gencli",
    srcs = [
        "cmd_file.go",
        "completion_file.go",
        "flag.go",
        "gencli.go",
        "root_file.go",
        "service_file.go",
        "util.go",
    ],
    importpath = "github.com/googleapis/gapic-generator-go/internal/gencli",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/pbinfo",
        "//internal/printer",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_jhump_protoreflect//desc",
        "@com_google_cloud_go_longrunning//autogen/longrunningpb",
        "@go_googleapis//google/api:annotations_go_proto",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "gencli_test",
    srcs = [
        "cmd_file_test.go",
        "completion_file_test.go",
        "flag_test.go",
        "root_file_test.go",
        "service_file_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":gencli"],
    deps = [
        "//internal/pbinfo",
        "//internal/txtdiff",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
    ],
)
