load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gengapic",
    srcs = [
        "client_init.go",
        "custom_operation.go",
        "doc_file.go",
        "example.go",
        "generator.go",
        "gengapic.go",
        "gengrpc.go",
        "genrest.go",
        "helpers.go",
        "imports.go",
        "lro.go",
        "markdown.go",
        "metadata.go",
        "mixins.go",
        "options.go",
        "paging.go",
        "stream.go",
        "test_utils.go",
    ],
    importpath = "github.com/googleapis/gapic-generator-go/internal/gengapic",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/errors",
        "//internal/grpc_service_config",
        "//internal/license",
        "//internal/pbinfo",
        "//internal/printer",
        "//internal/snippets",
        "@com_github_ghodss_yaml//:yaml",
        "@com_gitlab_golang_commonmark_markdown//:markdown",
        "@go_googleapis//gapic/metadata:metadata_go_proto",
        "@go_googleapis//google/api:annotations_go_proto",
        "@go_googleapis//google/api:serviceconfig_go_proto",
        "@go_googleapis//google/cloud:extended_operations_go_proto",
        "@go_googleapis//google/cloud/location:location_go_proto",
        "@go_googleapis//google/iam/v1:iam_go_proto",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@go_googleapis//google/rpc:code_go_proto",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protodesc",
        "@org_golang_google_protobuf//runtime/protoiface",
        "@org_golang_google_protobuf//types/descriptorpb",
    ],
)

go_test(
    name = "gengapic_test",
    srcs = [
        "client_init_test.go",
        "custom_operation_test.go",
        "doc_file_test.go",
        "example_test.go",
        "gengapic_test.go",
        "genrest_test.go",
        "helpers_test.go",
        "markdown_test.go",
        "metadata_test.go",
        "mixins_test.go",
        "options_test.go",
        "paging_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":gengapic"],
    deps = [
        "//internal/grpc_service_config",
        "//internal/pbinfo",
        "//internal/txtdiff",
        "@com_github_google_go_cmp//cmp",
        "@go_googleapis//gapic/metadata:metadata_go_proto",
        "@go_googleapis//google/api:annotations_go_proto",
        "@go_googleapis//google/api:httpbody_go_proto",
        "@go_googleapis//google/api:serviceconfig_go_proto",
        "@go_googleapis//google/cloud:extended_operations_go_proto",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@go_googleapis//google/rpc:code_go_proto",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protodesc",
        "@org_golang_google_protobuf//runtime/protoiface",
        "@org_golang_google_protobuf//types/descriptorpb",
        "@org_golang_google_protobuf//types/known/apipb",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/wrapperspb",
        "@org_golang_google_protobuf//types/pluginpb",
    ],
)
