load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gengapic",
    srcs = [
        "client_init.go",
        "custom_operation.go",
        "doc_file.go",
        "example.go",
        "generator.go",
        "gengapic.go",
        "gengrpc.go",
        "genrest.go",
        "helpers.go",
        "imports.go",
        "lro.go",
        "markdown.go",
        "metadata.go",
        "mixins.go",
        "options.go",
        "paging.go",
        "snippets.go",
        "stream.go",
        "test_utils.go",
        "well_known_types.go",
    ],
    importpath = "github.com/googleapis/gapic-generator-go/internal/gengapic",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/errors",
        "//internal/grpc_service_config",
        "//internal/license",
        "//internal/pbinfo",
        "//internal/printer",
        "//internal/snippets",
        "@com_github_ghodss_yaml//:yaml",
        "@com_github_golang_protobuf//protoc-gen-go/descriptor",
        "@com_github_golang_protobuf//protoc-gen-go/plugin",
        "@com_gitlab_golang_commonmark_markdown//:markdown",
        "@com_google_cloud_go_iam//apiv1/iampb",
        "@com_google_cloud_go_longrunning//autogen/longrunningpb",
        "@org_golang_google_genproto//googleapis/cloud/extendedops",
        "@org_golang_google_genproto//googleapis/cloud/location",
        "@org_golang_google_genproto//googleapis/gapic/metadata",
        "@org_golang_google_genproto_googleapis_api//annotations",
        "@org_golang_google_genproto_googleapis_api//serviceconfig",
        "@org_golang_google_genproto_googleapis_rpc//code",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protodesc",
        "@org_golang_google_protobuf//runtime/protoiface",
        "@org_golang_google_protobuf//types/descriptorpb",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/fieldmaskpb",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_google_protobuf//types/known/typepb",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)

go_test(
    name = "gengapic_test",
    srcs = [
        "client_init_test.go",
        "custom_operation_test.go",
        "doc_file_test.go",
        "example_test.go",
        "gengapic_test.go",
        "genrest_test.go",
        "helpers_test.go",
        "imports_test.go",
        "markdown_test.go",
        "metadata_test.go",
        "mixins_test.go",
        "options_test.go",
        "paging_test.go",
        "snippets_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":gengapic"],
    deps = [
        "//internal/grpc_service_config",
        "//internal/pbinfo",
        "//internal/snippets",
        "//internal/txtdiff",
        "@com_github_golang_protobuf//protoc-gen-go/descriptor",
        "@com_github_golang_protobuf//protoc-gen-go/plugin",
        "@com_github_google_go_cmp//cmp",
        "@com_google_cloud_go_longrunning//autogen/longrunningpb",
        "@org_golang_google_genproto//googleapis/cloud/extendedops",
        "@org_golang_google_genproto//googleapis/gapic/metadata",
        "@org_golang_google_genproto_googleapis_api//annotations",
        "@org_golang_google_genproto_googleapis_api//httpbody",
        "@org_golang_google_genproto_googleapis_api//serviceconfig",
        "@org_golang_google_genproto_googleapis_rpc//code",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protodesc",
        "@org_golang_google_protobuf//runtime/protoiface",
        "@org_golang_google_protobuf//types/descriptorpb",
        "@org_golang_google_protobuf//types/known/apipb",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/wrapperspb",
        "@org_golang_google_protobuf//types/pluginpb",
    ],
)
