load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gensample",
    srcs = [
        "bytes.go",
        "enum.go",
        "gapic.go",
        "genmanifest.go",
        "gensample.go",
        "inittree.go",
        "out.go",
        "paging.go",
        "plugin.go",
        "primval.go",
        "resource.go",
        "sampmain.go",
        "typing.go",
    ],
    importpath = "github.com/googleapis/gapic-generator-go/internal/gensample",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/errors",
        "//internal/gensample/schema_v1p2",
        "//internal/license",
        "//internal/pbinfo",
        "//internal/printer",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
    ],
)

go_test(
    name = "gensample_test",
    srcs = [
        "enum_test.go",
        "genmanifest_test.go",
        "gensample_sampleconfig_test.go",
        "gensample_test.go",
        "inittree_test.go",
        "resource_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":gensample"],
    deps = [
        "//internal/errors",
        "//internal/gensample/schema_v1p2",
        "//internal/pbinfo",
        "//internal/txtdiff",
        "@com_github_google_go_cmp//cmp",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
        "@org_golang_google_protobuf//proto",
    ],
)
