load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "grpc_service_config_proto",
    srcs = ["grpc_service_config.proto"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:wrappers_proto",
        "@go_googleapis//google/rpc:code_proto",
    ],
)

go_proto_library(
    name = "grpc_service_config_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/googleapis/gapic-generator-go/internal/grpc_service_config",
    proto = ":grpc_service_config_proto",
    visibility = ["//:__subpackages__"],
    deps = ["@go_googleapis//google/rpc:code_go_proto"],
)

go_library(
    name = "go_default_library",
    embed = [":grpc_service_config_go_proto"],
    importpath = "github.com/googleapis/gapic-generator-go/internal/grpc_service_config",
    visibility = ["//visibility:public"],
)
