load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "grpc_service_config_proto",
    srcs = ["grpc_service_config.proto"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:wrappers_proto",
        "@go_googleapis//google/rpc:code_proto",
    ],
)

go_proto_library(
    name = "grpc_service_config_go_proto",
    importpath = "github.com/googleapis/gapic-generator-go/internal/grpc_service_config",
    proto = ":grpc_service_config_proto",
    visibility = ["//:__subpackages__"],
    deps = ["@go_googleapis//google/rpc:code_go_proto"],
)

go_library(
    name = "grpc_service_config",
    srcs = ["config.go"],
    embed = [":grpc_service_config_go_proto"],
    importpath = "github.com/googleapis/gapic-generator-go/internal/grpc_service_config",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//types/known/durationpb",
    ],
)

go_test(
    name = "grpc_service_config_test",
    srcs = ["config_test.go"],
    embed = [":grpc_service_config"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@go_googleapis//google/rpc:code_go_proto",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)
