load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["schema.go"],
    importpath = "github.com/googleapis/gapic-generator-go/internal/gensample/schema_v1p2",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "go_default_test",
    srcs = ["schema_test.go"],
    embed = [":go_default_library"],
)
