load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "metadata_proto",
    srcs = ["metadata.proto"],
    visibility = ["//:__subpackages__"],
)

go_proto_library(
    name = "metadata_go_proto",
    importpath = "github.com/googleapis/gapic-generator-go/internal/snippets/metadata",
    proto = ":metadata_proto",
    visibility = ["//:__subpackages__"],
)

go_library(
    name = "metadata",
    embed = [":metadata_go_proto"],
    importpath = "github.com/googleapis/gapic-generator-go/internal/snippets/metadata",
    visibility = ["//:__subpackages__"],
)
