load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "sample",
    srcs = ["sample.go"],
    importpath = "github.com/googleapis/gapic-generator-go/internal/testing/sample",
    visibility = ["//:__subpackages__"],
    deps = [
        "@org_golang_google_genproto_googleapis_api//serviceconfig",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/descriptorpb",
        "@org_golang_google_protobuf//types/known/apipb",
    ],
)
